# hdph-rs

./: README.md  README.org  hdph-rs.cabal
src/Control/Parallel/: HdpH.hs
src/Control/Parallel/HdpH/: #FTStrategies.hs#  Conf.hs  FTStrategies.hs  Strategies.hs
src/Control/Parallel/HdpH/Internal/: Comm.hs  IVar.hs  Location.hs  Misc.hs  Scheduler.hs  Sparkpool.hs  Threadpool.hs
src/Control/Parallel/HdpH/Internal/Data/: Deque.hs
src/Control/Parallel/HdpH/Internal/State/: GRef.hs
src/Control/Parallel/HdpH/Internal/Type/: GRef.hs  Location.hs  Msg.hs  Par.hs  ToClosureInstances.hs
src/Test/HdpH/: detect-latency  fib.hs  mandel.hs  nbody.hs  queens.hs  simple-failure.hs  sumeuler.hs  summatory-liouville.hs
