name:          hdph-rs
version:       0.0.1
synopsis:      A Reliable Scheduling extension to Haskell distributed parallel Haskell
description:   Haskell distributed parallel Haskell with Reliable
               Scheduling (HdpH-RS) is a Haskell DSL for
               distributed-memory parallelism and fault tolerance,
               implemented entirely in Haskell (as supported by GHC).
               HdpH-RS is a derivation of HdpH
               <https://github.com/PatrickMaier/HdpH> and is a
               research tool for scalable and reliable scheduling on
               HPC platforms. The HdpH-RS design, validation and
               implementation is described in full in my PhD thesis
               \"Reliable Massively Parallel Symbolic Computing: Fault
               Tolerance for a Distributed Haskell\"
               <http://www.macs.hw.ac.uk/~rs46/phd-thesis.html> .
               .
               The contributions of HdpH-RS include:
               .
               * An extension to the HdpH language operational
                 semantics for fault tolerance in HdpH-RS has been
                 formulated (Chapter 3).
               .
               * The design of a fault tolerant work stealing
                 scheduling protocol has been abstracted in Promela
                 and verified with the SPIN model checker (Chapter 4),
                 and implemented in Haskell (Chapter 5). The Promela
                 model:
                 <https://github.com/robstewart57/phd-thesis/blob/master/spin_model/hdph_scheduler.pml>.
               .
               * The scalability of HdpH-RS has been measured up to
                 1400 cores on HECToR, a UK computing resource.
                 HdpH-RS fault tolerance has been tested with Chaos
                 Monkey unit tests on a Beowulf commodity cluster
                 (Chapter 6).
               .
               This repository is unlikely to receive further commits.
               Go to <https://github.com/PatrickMaier/HdpH> to
               download the upstream version of HdpH.

homepage:      https://github.com/robstewart57/hdph-rs
license:       BSD3
license-file:  LICENSE
author:        Rob Stewart <robstewart57@gmail.com>,
               Patrick Maier <C.Patrick.Maier@gmail.com>
maintainer:    Rob Stewart <robstewart57@gmail.com>
stability:     experimental
category:      Control, Parallelism, Distributed Computing, Monads
tested-with:   GHC == 7.4.1 || == 7.6.2
build-type:    Simple
cabal-version: >= 1.8

Library
  exposed-modules: Control.Parallel.HdpH,
                   Control.Parallel.HdpH.Conf,
                   Control.Parallel.HdpH.Strategies
                   Control.Parallel.HdpH.FTStrategies
  other-modules:   Control.Parallel.HdpH.Internal.Comm,
                   Control.Parallel.HdpH.Internal.Data.Deque,
                   Control.Parallel.HdpH.Internal.Data.Sem,
                   Control.Parallel.HdpH.Internal.Type.GRef,
                   Control.Parallel.HdpH.Internal.IVar,
                   Control.Parallel.HdpH.Internal.Location,
                   Control.Parallel.HdpH.Internal.Misc,
                   Control.Parallel.HdpH.Internal.Scheduler,
                   Control.Parallel.HdpH.Internal.Sparkpool,
                   Control.Parallel.HdpH.Internal.State.GRef,
                   Control.Parallel.HdpH.Internal.State.Location,
                   Control.Parallel.HdpH.Internal.Threadpool,
                   Control.Parallel.HdpH.Internal.Type.GRef,
                   Control.Parallel.HdpH.Internal.Type.Location,
                   Control.Parallel.HdpH.Internal.Type.Par
                   Control.Parallel.HdpH.Internal.Type.Msg,
                   Control.Parallel.HdpH.Internal.Type.ToClosureInstances
  build-depends:   template-haskell < 2.9,
                   array,
                   base >= 4 && < 5,
                   binary < 0.7,
                   bytestring == 0.10.*,
                   containers >= 0.5.0.0 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   HUnit,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   split,
                   time >= 1.2 && < 2,
                   hdph-closure == 0.0.1,
                   ghc-prim,
                   unix
  hs-source-dirs:  src
  ghc-options:  -O2

Executable hello
  main-is:         hello.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   binary < 0.7,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-rs,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src/Test/HdpH
  ghc-options:     -threaded -O2

Executable fib
  main-is:         fib.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   binary < 0.7,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-rs,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src/Test/HdpH
  ghc-options:     -threaded -O2

Executable sumeuler
  main-is:         sumeuler.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   binary < 0.7,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   monad-par,
                   monad-par-extras,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   split,
                   time >= 1.2 && < 2,
                   hdph-rs,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src/Test/HdpH
  ghc-options:     -threaded -O2

Executable nbody
  main-is:         nbody.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   binary < 0.7,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   cryptohash,
                   deepseq >= 1.1 && < 2,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-rs,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src/Test/HdpH
  ghc-options:     -threaded -O2

Executable summatory-liouville
  main-is:         summatory-liouville.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   binary < 0.7,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   monad-par,
                   monad-par-extras,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-rs,
                   hdph-closure == 0.0.1,
                   unix
  hs-source-dirs:  src/Test/HdpH
  ghc-options:     -threaded -O2

Executable queens
  main-is:         queens.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   binary < 0.7,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   monad-par,
                   monad-par-extras,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   time >= 1.2 && < 2,
                   hdph-rs,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src/Test/HdpH
  ghc-options:     -threaded -O2 -rtsopts

Executable mandel
  main-is:         mandel.hs
  build-depends:   template-haskell,
                   base >= 4 && < 5,
                   binary < 0.7,
                   vector-binary-instances,
                   bytestring == 0.10.*,
                   containers >= 0.1 && < 0.6,
                   deepseq >= 1.1 && < 2,
                   ghc-prim,
                   monad-par,
                   monad-par-extras,
                   mtl >= 2 && < 3,
                   network == 2.4.*,
                   network-info == 0.2.*,
                   network-multicast >= 0.0.7 && < 0.1,
                   network-transport == 0.3.*,
                   network-transport-tcp == 0.3.*,
                   random >= 1 && < 2,
                   split,
                   time >= 1.2 && < 2,
                   vector,
                   hdph-rs,
                   hdph-closure == 0.0.1
  hs-source-dirs:  src/Test/HdpH
  ghc-options:     -threaded -O2
